Remove links from experiences, add News section

--- a/_config.yml
+++ b/_config.yml
@@ -236,6 +236,9 @@ collections:
   experiences:
     output: true
     permalink: /:collection/:path/
+  news:
+    output: true
+    permalink: /:collection/:path/
 
 
 # These settings control how pages and collections are included in the site
@@ -297,6 +300,14 @@ defaults:
   - scope:
       path: ""
       type: experiences
+    values:
+      layout: single
+      author_profile: true
+      share: true
+  # _news
+  - scope:
+      path: ""
+      type: news
     values:
       layout: single
       author_profile: true
