--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,6 +31,9 @@ main:
     
   - title: "CV"
     url: /files/cv.pdf
+
+  - title: "Hobbies"
+    url: /hobbies/
     
   # - title: "CV"
   #   url: /cv-json/
