Update CV nav: link to /cv-json/ and show unavailable message

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,8 +29,8 @@ main:
   #- title: "Blog Posts"
   #  url: /year-archive/
     
-  - title: "CV"
-    url: /files/cv.pdf
+  - title: "CV (暂未开放)"
+    url: /cv-json/
 
   - title: "Hobbies"
     url: /hobbies/
