Add bilingual language switching feature (中英文切换功能)
- Add language toggle button in navigation bar next to theme toggle
- Implement complete i18n translation system with localStorage
- Translate all main pages: Home, News, Publications, Experiences, Hobbies
- Translate navigation menu items and sidebar elements
- Add translation data for Chinese and English
- Auto-detect and persist language preference
- Add documentation for language switching feature

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,30 +10,39 @@
 main:
   - title: "News"
     url: /news/
+    title_zh: "新闻"
 
   - title: "Publications"
     url: /publications/
+    title_zh: "出版物"
 
   - title: "Experiences"
     url: /experiences/
+    title_zh: "经历"
 
   #- title: "Talks"
-  #  url: /talks/    
+  #  url: /talks/
+  #  title_zh: "演讲"
 
   #- title: "Teaching"
-  #  url: /teaching/    
+  #  url: /teaching/
+  #  title_zh: "教学"
     
   #- title: "Portfolio"
   # url: /portfolio/
+  # title_zh: "作品集"
         
   #- title: "Blog Posts"
   #  url: /year-archive/
+  #  title_zh: "博客"
     
   - title: "CV"
     url: /files/cv.pdf
+    title_zh: "简历"
 
   - title: "Hobbies"
     url: /hobbies/
+    title_zh: "兴趣"
     
   # - title: "CV"
   #   url: /cv-json/
